# payment_system

./: .env  README.md  docker-compose.dev.yml
backend/: .pdm-python  Dockerfile.dev  pyproject.toml
backend/app/: main.py
backend/app/merchants/: commands.py  dependencies.py  models.py  routes.py  schemas.py
backend/app/merchants/services/: crypto.py  merchants.py
backend/app/project/: db.py  dependencies.py  settings.py  utils.py
backend/app/transactions/: commands.py  dependencies.py  models.py  routes.py  schemas.py
backend/app/transactions/services/: signatures.py  transactions.py
backend/app/users/: commands.py  dependencies.py  models.py  routes.py  schemas.py  services.py
frontend/: Dockerfile.dev
frontend/app/: package-lock.json  package.json  vite.config.ts
frontend/app/src/api/: auth.ts  merchants.ts  transactions.ts
frontend/app/src/assets/: auth_background.svg:Zone.Identifier  base.css  main.css
frontend/app/src/components/: AddButton.vue  AddMerchantForm.vue  Form.vue  FormField.vue  LoginForm.vue  MainContent.vue  MerchantInfo.vue  Merchants.vue  MerchantsList.vue  MerchantsListItem.vue  Navigation.vue  Payment.vue  PopUp.vue  RegistrationForm.vue  TransactionInfo.vue  Transactions.vue  TransactionsList.vue  TransactionsListItem.vue
frontend/app/src/router/: index.ts
frontend/app/src/views/: ExampleIntegrationView.vue  LoginView.vue  MerchantsView.vue  PaymentView.vue  RegistrationView.vue  TransactionsView.vue
proxy/: nginx.conf
